# factorio-server

./: .pre-commit-config.yaml  README.md  dagger.json
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  setup_terminal.sh  setup_user.sh
dagger/: pyproject.toml
dagger/src/main/: __init__.py  config.py  main.py  utils.py
opentofu/: disk.tf  network.tf  outputs.tf  providers.tf  ssh.tf  tofu_backend.tf  variables.tf  vm.tf
scripts/: common.sh  create_dagger_venv.sh  post_attach_container.sh  post_setup_container.sh  update_dagger_venv.sh
